# src/routes/api/v1/index.ts
@@ -6,6 +6,7 @@ import taskRoutes from "./task.routes";
 import profileRoutes from "./profile.routes";
 import sessionRoutes from "./session.routes";
 import adminRoutes from "./admin.routes";
+import leaderboardRoutes from "./leaderboard.routes";
 
 const router = express.Router();
 
@@ -16,5 +17,6 @@ router.use("/tasks", taskRoutes);
 router.use("/profile", profileRoutes);
 router.use("/sessions", sessionRoutes);
 router.use("/admin", adminRoutes);
+router.use("/leaderboard", leaderboardRoutes);
 
 export default router;
